debate 1- full data

--- a/video_processing.ipynb
+++ b/video_processing.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 1.07 s\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import math\n",
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -44,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -53,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 260 ms\n"
+      "time: 887 ms\n"
      ]
     }
    ],
@@ -72,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -80,10 +88,10 @@
     {
      "data": {
       "text/plain": [
-       "1453000"
+       "1251000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -91,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 2.93 ms\n"
+      "time: 19.5 ms\n"
      ]
     }
    ],
@@ -112,19 +120,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 274 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#extracting every 'second' of the video\n",
     "for i in range(0, duration, seconds):\n",
@@ -136,19 +136,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "time: 8.91 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# extarcting every frame\n",
     "count = 0;\n",
