--- a/debate1-emotions.ipynb
+++ b/debate1-emotions.ipynb
@@ -2,11 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 15.1 ms\n"
+     ]
+    }
+   ],
    "source": [
     "import http.client, urllib, base64, requests\n",
     "import cognitive_face as CF \n",
@@ -16,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -34,7 +42,10 @@
      "output_type": "stream",
      "text": [
       "Installed autotime.py. To use it, type:\n",
-      "  %load_ext autotime\n"
+      "  %load_ext autotime\n",
+      "The autotime extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autotime\n",
+      "time: 392 ms\n"
      ]
     }
    ],
@@ -45,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -54,7 +65,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 3.3 ms\n"
+      "time: 4.17 ms\n"
      ]
     }
    ],
@@ -70,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -79,7 +90,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 47.1 ms\n"
+      "time: 73.1 ms\n"
      ]
     }
    ],
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +158,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 5.66 ms\n"
+      "time: 5.75 ms\n"
      ]
     }
    ],
@@ -169,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -178,7 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 3.53 ms\n"
+      "time: 5.06 ms\n"
      ]
     }
    ],
@@ -193,12 +204,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "status_code: 400\n",
+      "response: {\"error\":{\"code\":\"InvalidURL\",\"message\":\"Invalid image URL or error downloading from target server. Remote server error returned: \\\"Response status code does not indicate success: 403 (Forbidden).\\\"\"}}\n"
+     ]
+    },
+    {
+     "ename": "CognitiveFaceException",
+     "evalue": "Error when calling Cognitive Face API:\n\tstatus_code: 400\n\tcode: InvalidURL\n\tmessage: Invalid image URL or error downloading from target server. Remote server error returned: \"Response status code does not indicate success: 403 (Forbidden).\"\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mCognitiveFaceException\u001b[0m                    Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-18-4e6ce2af4aa3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mjson\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m \u001b[0;34m'url'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0msingle_image\u001b[0m \u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0memotions\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcount\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdetect\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msingle_image\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mprocessed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprocessRequest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mheaders\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-16-adc4a6b33902>\u001b[0m in \u001b[0;36mdetect\u001b[0;34m(image, face_id, landmarks, faceRectangle, attributes)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     return util.request('POST', url, headers=headers, params=params, json=json,\n\u001b[0;32m---> 13\u001b[0;31m                         data=data)\n\u001b[0m",
+      "\u001b[0;32m/Users/Amiros/anaconda/lib/python3.5/site-packages/cognitive_face/util.py\u001b[0m in \u001b[0;36mrequest\u001b[0;34m(method, url, data, json, headers, params)\u001b[0m\n\u001b[1;32m     82\u001b[0m             \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstatus_code\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m             \u001b[0merror_msg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'code'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 84\u001b[0;31m             error_msg.get('message'))\n\u001b[0m\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;31m# Prevent `reponse.json()` complains about empty response.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mCognitiveFaceException\u001b[0m: Error when calling Cognitive Face API:\n\tstatus_code: 400\n\tcode: InvalidURL\n\tmessage: Invalid image URL or error downloading from target server. Remote server error returned: \"Response status code does not indicate success: 403 (Forbidden).\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 7min 55s\n"
+     ]
+    }
+   ],
    "source": [
     "# Face Detection & Emotioin Analysis \n",
     "emotions = {}\n",
@@ -216,8 +256,7 @@
     "    except:\n",
     "        pass \n",
     "\n",
-    "    if count < 5350:\n",
-    "        count += 5\n",
+    "    count += 5\n",
     "    \n",
     "    time.sleep(3)"
    ]
@@ -238,7 +277,7 @@
     }
    ],
    "source": [
-    "# Face Detection & Emotioin Analysis - UPDATED\n",
+    "# Face Detection & Emotion Analysis - UPDATED\n",
     "processed = {}\n",
     "face_detection = {}\n",
     "count = 355\n",
