debate1 - edited csv

--- a/json_to_csv.ipynb
+++ b/json_to_csv.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -24,12 +24,6 @@
     "This can probably be improved but serves the purpose of our analysis.\n",
     "I used Chris's schema so it will be useful for Quarz analysis.\n",
     "\n",
-    "\n",
-    "On the issues to double check\n",
-    "* Are we accidentally classifying the hosts reactions as the candidates? No. There is no frame saved with the host in it.\n",
-    "* How accurate is the gender analysis? Can we rely on it to tell Trump from Clinton? I believe it's 100% accurate.\n",
-    "* In general, how should we quantify the accuracy of this? Can we spot-check their facial expressions to see if checks our intuitions?\n",
-    "Thats a good idea. At the end, we are relying on Microsoft API and as good as they are ( they are pretty good!)\n",
     "\"\"\"\n",
     "\n",
     "EMOTIONS = [\n",
@@ -70,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "with open('/Users/Amiros/GitHub/debate/debate1_full2.json') as data_file:    \n",
+    "with open('/Users/Amiros/GitHub/debate/debate1_full.json') as data_file:    \n",
     "    json_data = json.load(data_file)\n",
     "    \n",
     "json_data = {int(k):v for k,v in json_data.items()} #converting keys to integer   \n",
@@ -85,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -152,15 +146,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.DataFrame(csv_data)\n",
-    "df.to_csv('deb.csv')"
+    "df = pd.DataFrame(csv_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('debate1_v2.csv', sep=',')"
    ]
   },
   {
