debate 1 - cvs without index

--- a/json_to_csv.ipynb
+++ b/json_to_csv.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -93,7 +93,7 @@
     "    frame = json_data[key]\n",
     "        \n",
     "    row = {\n",
-    "        'frame': frame,\n",
+    "        #'frame': frame,\n",
     "        'url': url,\n",
     "        'frame_time': key,\n",
     "        'trump_visible': False,\n",
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -158,23 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df.to_csv('debate1_v2.csv', sep=',')"
+    "df.to_csv('debate1_v2.csv', sep=',', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
