fixed acceptance speech

--- a/json_to_csv.ipynb
+++ b/json_to_csv.ipynb
@@ -70,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "with open('/Users/Amiros/GitHub/debate/trump_acceptance.json') as data_file:    \n",
+    "with open('/Users/Amiros/GitHub/debate/acceptance2.json') as data_file:    \n",
     "    json_data = json.load(data_file)\n",
     "    \n",
     "json_data = {int(k):v for k,v in json_data.items()} #converting keys to integer   \n",
@@ -978,8 +978,7 @@
        " 946,\n",
        " 947,\n",
        " 948,\n",
-       " 949,\n",
-       " 950]"
+       " 949]"
       ]
      },
      "execution_count": 4,
@@ -1576,7 +1575,7 @@
     "csv_data = []\n",
     "   \n",
     "for key in frame_keys:\n",
-    "    url = 'https://s3-us-west-2.amazonaws.com/post-election/hillary/concession%s.jpg' % key\n",
+    "    url = 'https://s3-us-west-2.amazonaws.com/post-election/inauguration/inaugruation%d.jpg' % key\n",
     "    frame = json_data[key]\n",
     "        \n",
     "    row = {\n",
@@ -1592,7 +1591,7 @@
     "        continue\n",
     "    elif len(frame) < 2:\n",
     "        for face in frame:\n",
-    "            if face['faceAttributes']['gender'] == 'male' and face['faceRectangle']['left'] > 200:\n",
+    "            if face['faceAttributes']['gender'] == 'male' and face['faceRectangle']['left'] > 500 and face['faceRectangle']['left'] < 750:\n",
     "                prefix = 'trump_'\n",
     "                row[prefix + 'visible'] = True\n",
     "                for emotion in EMOTIONS:\n",
