--- a/video_processing.ipynb
+++ b/video_processing.ipynb
@@ -56,13 +56,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 599 ms\n"
+      "time: 1.41 s\n"
      ]
     }
    ],
    "source": [
     "# setting up the file\n",
-    "videoFile = '/Users/Amiros/Downloads/trump.mp4'\n",
+    "videoFile = '/Users/Amiros/Downloads/inaugruation.mp4'\n",
     "vidcap = cv2.VideoCapture(videoFile)\n",
     "success,image = vidcap.read()\n",
     "\n",
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -134,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1min 15s\n"
+      "time: 10min 49s\n"
      ]
     }
    ],
@@ -144,7 +144,7 @@
     "    vidcap.set(cv2.CAP_PROP_POS_MSEC,i)\n",
     "    success,image = vidcap.read()\n",
     "    j = i/1000\n",
-    "    cv2.imwrite(\"trump/acceptance%d.jpg\" % j, image)     # save frame as JPEG file\n",
+    "    cv2.imwrite(\"inaugruation/inaugruation%d.jpg\" % j, image)     # save frame as JPEG file\n",
     "#     time.sleep(0.5)\n",
     "#     s3.meta.client.upload_file('/Users/Amiros/GitHub/debate/trump/acceptance%d.jpg'%j, 'post-election\\\\/trump', 'acceptance%d.jpg'%j)     #upload to S3"
    ]
